--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/shopping-cart
 spring.datasource.username=root
 spring.datasource.password=shopping
+spring.jpa.hibernate.ddl-auto=update
