--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,10 @@
 			<artifactId>guava</artifactId>
 			<version>13.0-rc1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
