--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/shopping-cart
 spring.datasource.username=root
 spring.datasource.password=shopping
 spring.jpa.hibernate.ddl-auto=update
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
